2001-11-18  Bruno Haible  <bruno@clisp.org>

	* gettext.texi (Common Lisp): Update.
	(Java): Refer to the Javadoc documentation.

2001-11-18  Bruno Haible  <haible@clisp.cons.org>

	* gettext.texi (Prerequisites): Update for autoconf-2.50 users.
	(gettextize Invocation): Document option --intl.
	(configure.in): Update for autoconf-2.50 users. Document possibility
	to work without intl directory.
	(aclocal): Likewise.

2001-11-17  Bruno Haible  <haible@clisp.cons.org>

	* msgfmt.texi: --check-accelerators has optional argument.

2001-11-11  Bruno Haible  <haible@clisp.cons.org>

	* msgfmt.texi: Document --check-accelerators option.

2001-11-11  Bruno Haible  <haible@clisp.cons.org>

	* msginit.texi: Remove --verbose documentation.

2001-08-23  Karl Eichwalder  <ke@suse.de>

	* gettext.texi (Main PO Commands): Reflect po-mode.el key binding
	changes.
	(Translated Entries): Likewise.
	(Fuzzy Entries): Likewise.
	(Untranslated Entries): Likewise.
	(Obsolete Entries): Likewise.
	(Auxiliary): Likewise.

2001-11-07  Bruno Haible  <haible@clisp.cons.org>

	* gettext.texi (Smalltalk): Update from
	Paolo Bonzini <bonzini@gnu.org>.

2001-11-05  Bruno Haible  <haible@clisp.cons.org>

	* gettext.texi (Aspects): Write "German" instead of "French", since
	the french number formatting rules are different.
	Reported by Mark Hoebeke <mh@jouy.inra.fr>.

2001-11-01  Bruno Haible  <haible@clisp.cons.org>

	* matrix.texi: Update.
	* nls.texi (STATUS): Likewise.

2001-10-30  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (EXTRA_DIST): Add texi2html.

2001-10-21  Bruno Haible  <haible@clisp.cons.org>

	* gettext.texi (Header Entry): The language-team address can be an
	URL instead of an email address.
	(Plural forms): Gaeilge is also known as Irish.
	(src/Makefile): No need to put libsupport.a into LIBS twice.
	(Java): Add more documentation.
	(Pascal): Likewise.
	(YCP): Likewise.
	(RST): Update.

2001-10-19  Bruno Haible  <haible@clisp.cons.org>
