@@ -1,3 +1,8 @@
+2001-11-25  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (install-data-local): Make it work when
+	builddir != srcdir.
+
 2001-11-11  Bruno Haible  <haible@clisp.cons.org>
 
 	* team-address: Remove verbose argument.
