@@ -1,3 +1,7 @@
+2001-11-25  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (EXTRA_DIST_html): Make it work when builddir != srcdir.
+
 2001-11-18  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (Common Lisp): Update.
